# APLMOOC_Backend

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pylintrc  Dockerfile  LICENSE  README.md  app.py  coverage.sh  database.py  debug.sh  docker-compose.yml  lint.sh  pyproject.toml  requirements.txt  schema.sql  server.py  test.sh  tester.py
backend/: __init__.py  database.py  endpoints.py  grader.py  tester.py
grader/: grader.apln  grader_namespace.py
problems/: README.md  ch0_p0_example1.json  ch0_p0_example2.json  ch0_p0_example3.json  ch1_p1.json  example.json
templates/: index.html
test_framework/: README.md  Test.apln  example.json  test_namespace.py
test_framework/example_files/: table.csv  table2.csv  weights
tests/basics/: basics_test.py
tests/grader/: Ranking.aplf  RankingError.aplf  RankingFull.aplf  RankingProh.aplf  RankingTimeout.aplf  database_test.py  example.json  grader_test.py  helper.py
