[tool.poetry]
name = "aplmooc-backend"
version = "0.1.0"
description = ""
authors = ["PixelSergey <sergey.ichtchenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
asyncio = "^3.4.3"
msgpack = "^1.0.8"
websockets = "^12.0"
gunicorn = "^22.0.0"
requests = "^2.32.3"
flask-cors = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
pytest = "^8.2.2"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
